--- a/src/main/resources/view/fxml/partial/InstanceButton.fxml
+++ b/src/main/resources/view/fxml/partial/InstanceButton.fxml
@@ -12,20 +12,21 @@
 <StackPane xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx"
            fx:controller="com.github.franckyi.emerald.controller.partial.InstanceButtonController">
     <VBox fx:id="instanceMenu" alignment="CENTER" spacing="10" opacity="0" styleClass="instance-list-item-menu">
-        <JFXButton styleClass="button-success-variant" prefWidth="120" prefHeight="80" onAction="#launchInstanceAction">
+        <JFXButton fx:id="playButton" styleClass="button-success" prefWidth="120" prefHeight="80"
+                   onAction="#launchInstanceAction" opacity="0.7">
             <graphic>
                 <MaterialIconView glyphName="PLAY_ARROW" size="64"/>
             </graphic>
         </JFXButton>
         <HBox alignment="CENTER" spacing="10">
-            <JFXButton styleClass="button-surface-variant" prefWidth="55" prefHeight="30"
-                       onAction="#openSettingsAction">
+            <JFXButton fx:id="settingsButton" styleClass="button-surface" prefWidth="55" prefHeight="30"
+                       onAction="#openSettingsAction" opacity="0.7">
                 <graphic>
                     <MaterialIconView glyphName="SETTINGS" size="16"/>
                 </graphic>
             </JFXButton>
-            <JFXButton styleClass="button-error-variant" prefWidth="55" prefHeight="30"
-                       onAction="#deleteInstanceAction">
+            <JFXButton fx:id="deleteButton" styleClass="button-error" prefWidth="55" prefHeight="30"
+                       onAction="#deleteInstanceAction" opacity="0.7">
                 <graphic>
                     <MaterialIconView glyphName="DELETE" size="16"/>
                 </graphic>
