--- a/src/main/resources/view/fxml/screen/NewVanillaInstance.fxml
+++ b/src/main/resources/view/fxml/screen/NewVanillaInstance.fxml
@@ -18,7 +18,10 @@
                 </JFXRippler>
             </left>
             <center>
-                <Label text="Create new Vanilla instance" BorderPane.alignment="CENTER_LEFT"/>
+                <HBox spacing="10" alignment="CENTER_LEFT" BorderPane.alignment="CENTER_LEFT">
+                    <MaterialIconView glyphName="ADD_BOX"/>
+                    <Label text="Create new Vanilla instance"/>
+                </HBox>
             </center>
             <right>
                 <JFXRippler onMouseClicked="#homeAction" BorderPane.alignment="CENTER"
@@ -74,7 +77,7 @@
                 <JFXButton fx:id="createInstanceButton" styleClass="button-success" text="Create instance"
                            onAction="#createInstanceAction">
                     <graphic>
-                        <MaterialIconView glyphName="CREATE_NEW_FOLDER" size="24.0"/>
+                        <MaterialIconView glyphName="ADD_BOX" size="24.0"/>
                     </graphic>
                     <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
